Add Svelte support to Prettier and ESLint configurations
- Updated .prettierrc to include Svelte plugin and parser options for .svelte files.
- Modified package.json to add linting and formatting scripts for Svelte files.
- Updated package-lock.json to include new dependencies for ESLint and Prettier plugins related to Svelte.

--- a/.prettierrc
+++ b/.prettierrc
@@ -12,6 +12,7 @@
   "proseWrap": "preserve",
   "quoteProps": "as-needed",
   "jsxSingleQuote": false,
+  "plugins": ["prettier-plugin-svelte"],
   "overrides": [
     {
       "files": "*.php",
@@ -19,6 +20,12 @@
         "parser": "php",
         "printWidth": 120,
         "tabWidth": 4
+      }
+    },
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
       }
     }
   ]
