--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,css,scss,json}\"",
-    "format:check": "prettier --check \"src/**/*.{js,ts,jsx,tsx,css,scss,json}\""
+    "lint": "eslint . --max-warnings 0",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,svelte,css,scss,json}\"",
+    "format:check": "prettier --check \"src/**/*.{js,ts,jsx,tsx,svelte,css,scss,json}\"",
+    "check": "npm run lint && npm run format:check"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +18,14 @@
   "description": "",
   "devDependencies": {
     "@kucrut/vite-for-wp": "^0.12.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-svelte": "^3.12.4",
     "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "svelte-eslint-parser": "^1.3.3",
     "typescript": "^5.9.3",
     "vite": "^7.1.9"
   },
