Add testing framework and update configuration files
- Updated .gitignore to exclude test coverage and result directories.
- Enhanced composer.json to include development dependencies for PHPUnit, Mockery, and Brain Monkey, along with autoloading for test classes.
- Updated package.json and package-lock.json to include Vitest and related testing libraries for improved testing capabilities.
- Added new test scripts to package.json for running tests and generating coverage reports.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,11 @@ yarn-error.log*
 # Temporary files
 *.tmp
 *.temp
+
+# Test coverage
+coverage/
+.nyc_output/
+.phpunit.cache/
+
+# Test results
+.vitest/
