--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,24 @@
     "require": {
         "timber/timber": "^2.3",
         "kucrut/vite-for-wp": "^0.12.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0",
+        "mockery/mockery": "^1.6",
+        "brain/monkey": "^2.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "CoreTheme\\": "inc/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "CoreTheme\\Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "test:coverage": "phpunit --coverage-html coverage"
     }
 }
