--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest watch",
+    "test:php": "composer test",
+    "test:all": "npm run test:run && npm run test:php",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,svelte,css,scss,json}\"",
@@ -18,16 +25,22 @@
   "description": "",
   "devDependencies": {
     "@kucrut/vite-for-wp": "^0.12.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/svelte": "^5.2.8",
     "@typescript-eslint/eslint-plugin": "^8.46.0",
     "@typescript-eslint/parser": "^8.46.0",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-svelte": "^3.12.4",
+    "happy-dom": "^20.0.0",
+    "jsdom": "^27.0.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
     "svelte-eslint-parser": "^1.3.3",
     "typescript": "^5.9.3",
-    "vite": "^7.1.9"
+    "vite": "^7.1.9",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
