--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "bundle": "npm run build && ./scripts/bundle.sh",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
