--- a/package.json
+++ b/package.json
@@ -27,24 +27,20 @@
   "devDependencies": {
     "@kucrut/vite-for-wp": "^0.12.0",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/svelte": "^5.2.8",
     "@typescript-eslint/eslint-plugin": "^8.46.0",
     "@typescript-eslint/parser": "^8.46.0",
+    "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/ui": "^3.2.4",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-svelte": "^3.12.4",
     "happy-dom": "^20.0.0",
     "jsdom": "^27.0.0",
     "prettier": "^3.6.2",
-    "prettier-plugin-svelte": "^3.4.0",
-    "svelte-eslint-parser": "^1.3.3",
     "typescript": "^5.9.3",
     "vite": "^7.1.9",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "svelte": "^5.39.11"
+    "vue": "^3.5.22"
   }
 }
