Transition from Svelte to Vue components across the theme
- Removed Svelte configurations and components, including .prettierrc and svelte.config.js.
- Updated documentation in CLAUDE.md, INSTALL.md, and README.md to reflect the shift to Vue 3.
- Adjusted component registration and testing configurations to support Vue, including changes in vitest.config.ts and package.json.
- Revised error handling documentation and examples to align with Vue's Composition API.
- Ensured all references to Svelte were replaced with Vue throughout the codebase and documentation.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "test:all": "npm run test:run && npm run test:php",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,svelte,css,scss,json}\"",
-    "format:check": "prettier --check \"src/**/*.{js,ts,jsx,tsx,svelte,css,scss,json}\"",
+    "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,vue,css,scss,json}\"",
+    "format:check": "prettier --check \"src/**/*.{js,ts,jsx,tsx,vue,css,scss,json}\"",
     "check": "npm run lint && npm run format:check"
   },
   "keywords": [],
