Refactor theme structure and update template paths
- Updated composer.json to include autoloading for the components directory, improving organization.
- Changed template rendering paths in front-page.php and index.php to reflect the new directory structure.
- Modified TimberConfig in Theme.php to include additional directories for improved template flexibility.

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
     },
     "autoload": {
         "psr-4": {
-            "CoreTheme\\": "inc/",
-            "CoreTheme\\Components\\": "components/"
-        }
+            "CoreTheme\\": "inc/"
+        },
+        "classmap": [
+            "components/"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
