--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,13 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["lib/**/*.ts", "lib/**/*.d.ts", "src/**/*.vue"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "lib/**/*.ts",
+    "lib/**/*.d.ts",
+    "src/**/*.vue",
+    "components/**/*.ts",
+    "layouts/**/*.ts",
+    "pages/**/*.ts"
+  ],
+  "exclude": ["node_modules", "dist", "vendor"]
 }
