Refactor architecture and enhance Vue component management
- Updated ARCHITECTURE.md to reflect the new structure of components, including the addition of Vue components and composables.
- Modified tsconfig.json to include paths for Vue files in components and composables, improving TypeScript support.
- Enhanced vitest.config.ts to include test files for components and composables, streamlining the testing process.
- Refactored main.ts to implement an auto-mounting system for Vue components, simplifying component initialization.
- Removed outdated files related to previous component structures, focusing on the current implementation for better maintainability.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,9 @@
   "include": [
     "lib/**/*.ts",
     "lib/**/*.d.ts",
-    "src/**/*.vue",
     "components/**/*.ts",
+    "components/**/*.vue",
+    "composables/**/*.ts",
     "layouts/**/*.ts",
     "pages/**/*.ts"
   ],
