--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "happy-dom": "^20.0.0",
     "jsdom": "^27.0.0",
     "prettier": "^3.6.2",
+    "terser": "^5.44.0",
     "typescript": "^5.9.3",
     "vite": "^7.1.9",
     "vitest": "^3.2.4"
