Update Prettier configuration and enhance project structure
- Added new entries to .prettierignore for vendor, bundles, coverage, and generated files to improve formatting control.
- Updated .prettierrc to include a schema reference and adjusted print width settings for better code readability.
- Enhanced the configuration for PHP and Twig file formatting with specific parser options.
- Refactored package.json scripts for formatting to include specific commands for TypeScript, Vue, PHP, and Twig files.
- Updated README.md to reflect changes in the development workflow and project structure.

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,11 @@
 # Dependencies
 node_modules
+vendor
 
 # Build output
 dist
 build
+bundles
 *.min.js
 *.min.css
 
@@ -17,11 +19,25 @@ npm-debug.log*
 
 # WordPress
 *.pot
+*.mo
 
 # Package managers
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
+composer.lock
+
+# Test files
+coverage
+.nyc_output
+
+# Generated files
+stats.html
+
+# Twig files (melody parser has issues with dynamic tags)
+*.twig
 
 # Misc
 .DS_Store
+.env
+.env.local
