--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "test:all": "npm run test:run && npm run test:php",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write \"src/**/*.{js,ts,jsx,tsx,vue,css,scss,json}\"",
-    "format:check": "prettier --check \"src/**/*.{js,ts,jsx,tsx,vue,css,scss,json}\"",
+    "format": "prettier --write \"./**/*.{ts,js,vue,css,php,twig,json,md}\" --ignore-path .prettierignore",
+    "format:check": "prettier --check \"./**/*.{ts,js,vue,css,php,twig,json,md}\" --ignore-path .prettierignore",
+    "format:ts": "prettier --write \"./**/*.ts\"",
+    "format:vue": "prettier --write \"./**/*.vue\"",
+    "format:php": "prettier --write \"./**/*.php\"",
+    "format:twig": "prettier --write \"./**/*.twig\"",
     "check": "npm run lint && npm run format:check"
   },
   "keywords": [],
@@ -26,6 +30,7 @@
   "description": "",
   "devDependencies": {
     "@kucrut/vite-for-wp": "^0.12.0",
+    "@prettier/plugin-php": "^0.24.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/vue": "^8.1.0",
     "@typescript-eslint/eslint-plugin": "^8.46.0",
@@ -37,6 +42,7 @@
     "happy-dom": "^20.0.0",
     "jsdom": "^27.0.0",
     "prettier": "^3.6.2",
+    "prettier-plugin-twig-melody": "^0.4.6",
     "terser": "^5.44.0",
     "typescript": "^5.9.3",
     "vite": "^7.1.9",
