Integrate focus trap functionality in MobileMenu for enhanced accessibility
- Added focus trap using @vueuse/integrations to manage keyboard navigation within the mobile menu.
- Updated MobileMenu component to include aria attributes for improved screen reader support.
- Implemented logic to activate/deactivate the focus trap based on menu state, ensuring a seamless user experience.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@vueuse/integrations": "^14.0.0",
+    "focus-trap": "^7.6.6",
     "vue": "^3.5.22"
   }
 }
