Update theme metadata and enhance documentation
- Added license information (0BSD) to composer.json and package.json for clarity on usage rights.
- Updated README.md to reflect a more comprehensive description of the theme, emphasizing its modern features and security measures.
- Revised style.css to include updated author information and a more detailed description of the theme's capabilities.
- Improved overall documentation to better guide users in understanding the theme's architecture and features.

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "core-theme/wordpress-theme",
   "description": "Modern WordPress theme with Timber and Vite",
   "type": "project",
+  "license": "0BSD",
   "require": {
     "timber/timber": "^2.3",
     "kucrut/vite-for-wp": "^0.12.0"
