--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "format:twig": "prettier --write \"./**/*.twig\"",
     "check": "npm run lint && npm run format:check"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": ["wordpress", "theme", "timber", "vite", "typescript", "vue3", "modern"],
+  "author": "Core Theme Contributors",
+  "license": "0BSD",
+  "description": "Modern WordPress theme with Timber, Vite, TypeScript, and Vue 3",
   "devDependencies": {
     "@kucrut/vite-for-wp": "^0.12.0",
     "@prettier/plugin-php": "^0.24.0",
