Refactor theme name and namespace from CoreTheme to BYS Press
- Updated theme name and description in composer.json, package.json, and style.css to reflect the new branding.
- Changed all relevant namespaces and package declarations from CoreTheme to BYSPress across multiple files for consistency.
- Revised front-page.php, functions.php, and README.md to align with the new theme identity and improve clarity on features and usage.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "core-theme/wordpress-theme",
-  "description": "Modern WordPress theme with Timber and Vite",
+  "name": "bys-press/wordpress-theme",
+  "description": "BYS Press - Modern WordPress theme with Timber and Vite",
   "type": "project",
   "license": "0BSD",
   "require": {
@@ -14,13 +14,13 @@
   },
   "autoload": {
     "psr-4": {
-      "CoreTheme\\": "inc/"
+      "BYSPress\\": "inc/"
     },
     "classmap": ["components/"]
   },
   "autoload-dev": {
     "psr-4": {
-      "CoreTheme\\Tests\\": "tests/"
+      "BYSPress\\Tests\\": "tests/"
     }
   },
   "scripts": {
